<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:id="@+id/mainData"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal|center_vertical"
        android:layout_alignParentTop="true"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/timeLL"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="0dp"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="20dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/timeInscription"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:text="@string/time" />

            <TextView
                android:id="@+id/timeDB"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:text="TextView" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/maxSpeedLL"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:orientation="horizontal">


            <TextView
                android:id="@+id/maxSpedInscription"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:text="@string/max_speed" />

            <TextView
                android:id="@+id/maxSpeedDB"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:text="TextView" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/averageSpeedLL"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/averageSpeedInscription"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:text="@string/average_speed" />

            <TextView
                android:id="@+id/averageSpeedDB"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:text="TextView" />

        </LinearLayout>


        <LinearLayout
            android:id="@+id/distanceLL"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/distanceInscription"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:text="@string/distance" />

            <TextView
                android:id="@+id/distanceDB"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:text="TextView" />

        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_below="@+id/mainData"
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <com.github.mikephil.charting.charts.LineChart
            android:id="@+id/lineChart"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:layout_marginStart="0dp"
            android:layout_marginLeft="0dp"
            android:layout_marginEnd="0dp"
            android:layout_marginRight="0dp"
            android:layout_marginBottom="20dp" />
    </LinearLayout>

</RelativeLayout>