<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:fab="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:keepScreenOn="true"
    android:background="@color/white">

    <RelativeLayout
        android:id="@+id/toolbarSpeed"
        android:layout_width="match_parent"
        android:layout_height="140dp"
        android:layout_marginTop="95dp"
        android:layout_gravity="center"
        android:background="@color/white"
        android:elevation="5dp">

        <ProgressBar
            android:id="@+id/progressBarCircularIndeterminate"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"

            android:elevation="10dp" />

        <TextView
            android:id="@+id/currentSpeed"
            android:text=""
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:textSize="50sp"
            android:textColor="@android:color/black"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true"/>

        <TextView
            android:id="@+id/accelTime"
            android:text=""
            android:layout_above="@id/currentSpeed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:textSize="25sp"
            android:textColor="@android:color/black"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true"/>

    </RelativeLayout>


    <com.melnykov.fab.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginRight="25dp"
        android:layout_marginBottom="25dp"
        android:layout_gravity="center"
        android:onClick="onFabClick"
        android:src="@drawable/ic_action_play"
        fab:fab_colorNormal="@color/OrangeRed"
        fab:fab_colorPressed="@color/Red"
        fab:fab_colorRipple="@color/blue_dark" />

    <com.melnykov.fab.FloatingActionButton
        android:id="@+id/refresh"
        android:onClick="onRefreshClick"
        fab:fab_type="mini"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_action_refresh"
        android:layout_gravity="center_horizontal"
        fab:fab_colorNormal="@color/OrangeRed"
        fab:fab_colorPressed="@color/Red"
        fab:fab_colorRipple="@color/blue_dark"
        android:layout_alignParentRight="true"
        android:layout_marginRight="35dp"
        android:layout_marginBottom="16dp"
        android:layout_above="@+id/fab" />

    <TextView
        android:id="@+id/titleMaxSpeed"
        android:text="@string/max_speed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:textColor="@android:color/black"
        android:layout_below="@id/toolbarSpeed"
        android:layout_marginTop="20dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp" />

    <TextView
        android:id="@+id/maxSpeed"
        android:text=""
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:textColor="@android:color/black"
        android:layout_below="@id/titleMaxSpeed"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="20dp"
        android:layout_marginStart="20dp" />

    <View
        android:id="@+id/separator1"
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:background="@color/white"
        android:layout_marginTop="16dp"
        android:layout_below="@+id/maxSpeed"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:id="@+id/titleAverageSpeed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/titleMaxSpeed"
        android:layout_alignBottom="@+id/titleMaxSpeed"
        android:layout_alignEnd="@+id/averageSpeedInscription"
        android:layout_alignRight="@+id/averageSpeedInscription"
        android:text="@string/average_speed"
        android:textColor="@android:color/black"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/averageSpeedInscription"
        android:text=""
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:textColor="@android:color/black"
        android:layout_below="@id/titleAverageSpeed"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="16dp"
        android:layout_marginRight="20dp"
        android:layout_marginEnd="20dp" />

    <TextView
        android:id="@+id/titleDistance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/titleTime"
        android:layout_alignBottom="@+id/titleTime"
        android:layout_alignLeft="@+id/distance"
        android:layout_alignStart="@+id/distance"
        android:text="@string/distance"
        android:textColor="@android:color/black"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/distance"
        android:text=""
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:textColor="@android:color/black"
        android:layout_below="@id/titleDistance"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="20dp"
        android:layout_marginStart="20dp" />

    <View
        android:id="@+id/separator3"
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:background="@color/grey_lighter"
        android:layout_marginTop="16dp"
        android:layout_below="@+id/distance"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:id="@+id/titleTime"
        android:text="@string/time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:textColor="@android:color/black"
        android:layout_below="@id/separator1"
        android:layout_marginTop="16dp"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginRight="20dp"
        android:layout_marginEnd="20dp" />

    <Chronometer
        android:id="@+id/time"
        android:text=""
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:textColor="@android:color/black"
        android:layout_below="@id/titleTime"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="16dp"
        android:layout_marginRight="20dp"
        android:layout_marginEnd="20dp" />

    <View
        android:id="@+id/separator4"
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:background="@color/white"
        android:layout_marginTop="16dp"
        android:layout_below="@+id/time"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />


    <ImageView
        android:id="@+id/titleSatellite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/satellite"
        android:layout_below="@id/separator4"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="20dp"
        android:layout_marginStart="20dp"/>

    <TextView
        android:id="@+id/satellite"
        android:text=""
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="17sp"
        android:textColor="@android:color/black"
        android:layout_below="@id/titleSatellite"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="20dp"
        android:layout_marginStart="20dp"/>

    <View
        android:id="@+id/separator6"
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:background="@color/White"
        android:elevation="1dp"
        android:layout_marginTop="16dp"
        android:layout_below="@+id/satellite"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:id="@+id/status"
        android:text="@string/waiting_for_fix"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="15sp"
        android:layout_marginTop="16dp"
        android:textColor="@color/grey_light"
        android:layout_below="@+id/separator6"
        android:layout_centerHorizontal="true" />

</RelativeLayout>